# tikpilot

./: .gitignore  .windsurfrules  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  package.json
apps/backend/config/: default.toml
apps/backend/src/: lib.rs  main.rs
apps/backend/src/config/: mod.rs
apps/backend/src/db/: emulator.rs  mod.rs
apps/backend/src/emulator/: app_manager.rs  mod.rs  port_manager.rs
apps/backend/src/handlers/: emulator.rs  mod.rs
apps/backend/src/models/: mod.rs
apps/backend/src/routes/: health.rs  mod.rs
apps/backend/tests/: health_check.rs  test_emulator_api.rs
apps/db/: Dockerfile
apps/frontend/: .dockerignore  Dockerfile  README.md  components.json  package-lock.json  package.json
apps/frontend/app/: root.tsx
apps/frontend/app/lib/: api.ts  store.ts
apps/frontend/app/routes/: _app._index.tsx  _app.actions.tsx  _app.api-test.tsx  _app.emulators.tsx  _app.settings.tsx  _app.tsx  health.tsx  ping.tsx
apps/playwright-service/: .eslintrc.json  Dockerfile  docker-compose.yml  package.json  prometheus.yml  tsconfig.json
apps/playwright-service/src/: app.ts  index.ts
docs/: containerize_issue.md  prd.md
scripts/: task-complexity-report.json
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
tools/scripts/: package.json
(+10 files in other folders)
