[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
