[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
actix-rt = "2.9.0"
